# rk3588-ai-video-codec

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md  index.html  pyproject.toml  search.json  sitemap.xml  zensical.toml
.agents/skills/github-actions-logs/: SKILL.md
.agents/skills/vscode-devcontainer-cleanup/: SKILL.md
.agents/skills/vscode-devcontainer-cleanup/scripts/: cleanup-vscode-devcontainer.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  lint.yml  package.yml  test.yml
api/: index.html
architecture/: index.html
bench/: .gitignore  README.md  REPORT.md  plot_perf.py  plot_rd_curve.py  pyproject.toml  run_rd_benchmark.sh
benchmark/: index.html
delivery/: index.html
docs/: ai-video-codec-timeline.md  api.md  architecture.md  benchmark.md  cli.md  delivery.md  development.md  getting-started.md  index.md  migration.md  packaging.md  results.md  testing.md  zensical.yml
docs/release/: DEVELOPMENT.md  EXAMPLES.md  README.md  USAGE.md
docs/stylesheets/: extra.css
doxygen/: README_8md.html  annotated.html  buffer_8h.html  buffer_8h_source.html  buffer__pool_8c.html  buffer__pool_8c_source.html  classes.html  decoder_8c.html  decoder_8c_source.html  decoder_8h.html  decoder_8h_source.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ec3241e58d155a941a66875b6db8a253.html  encoder_8c.html  encoder_8c_source.html  encoder_8h.html  encoder_8h_source.html  files.html  frame_8c.html  frame_8c_source.html  frame_8h.html  frame_8h_source.html  functions.html  functions_vars.html  globals.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_r.html  index.html  init_8c.html  init_8c_source.html  internal_8h.html  internal_8h_source.html  menudata.js  node__demux_8c.html  node__demux_8c_source.html  (+71 more)
doxygen/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  (+27 more)
examples/: decode_file.c  decode_formats.c  encode_file.c  latency_test.c  psnr_test.c  stream_decode.c  stream_device_pair.c  stream_encode.c  stream_transcode.c  transcode.c  visual_compare.c
getting-started/: index.html
include/rkvc/: buffer.h  decoder.h  encoder.h  frame.h  pipeline.h  policy.h  port.h  rkvc.h  scale.h  session.h  stream.h  types.h
lib/: buffer_pool.c  decoder.c  encoder.c  frame.c  init.c  internal.h  node_demux.c  node_dma_to_host.c  node_mpp_dec.c  node_mpp_enc.c  node_mux.c  node_post_upscale.c  node_rga.c  node_svt_enc.c  pipeline.c  port.c  rkvc-config.cmake.in  rkvc.pc.in  router.c  scale.c  scheduler.c  session.c  stream.c  utils.c
migration/: index.html
packaging/: index.html
release/: index.html
release/DEVELOPMENT/: index.html
release/EXAMPLES/: index.html
release/USAGE/: index.html
scripts/: benchmark_vpu.sh  build-common.sh  build-svt.sh  mpp.supp  network-e2e-test.sh  package-portable.sh  portable-test-helpers.sh  rebuild-ffmpeg-av1.sh  rebuild-ffmpeg-rkmpp.sh  run-bench.sh  test-portable.sh  test-rga.sh  test-strict.sh
src/rk3588_ai_video_codec/: benchmark.py  cli.py  domain.py  ffmpeg_backend.py  operations.py  plotting.py  process.py  reporting.py  runtime.py  test_sequences.py
src/rk3588_ai_video_codec/suites/: extra_codecs.py  h26x.py  quality.py
testing/: index.html
tests/: test_bench_permission_failure.sh  test_benchmark.py  test_buffer.c  test_cli_args.sh  test_contracts.c  test_fault_injection.c  test_fixtures.c  test_fixtures.h  test_frame.c  test_hardware.c  test_internal.c  test_permissions.c  test_plotting.py  test_post_upscale.c  test_router.c  test_scale.c  test_support.h  test_types.c
tools/: rkvc_bench.c  rkvc_decode.c  rkvc_encode.c  rkvc_info.c  rkvc_session_upscale.c  rkvc_transcode.c  rkvc_yuv_upscale.c
