[project]
name = "rk3588-ai-video-codec"
version = "0.1.0"
description = "RK3588 VPU benchmark CLI managed by uv"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
benchmark-vpu = "rk3588_ai_video_codec.cli:main"
rk3588-ai-video-codec = "rk3588_ai_video_codec.cli:main"

[dependency-groups]
dev = [
	"pytest>=8.3.5",
	"ruff>=0.11.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PTH", "PIE", "RUF"]
ignore = ["RUF001"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
