[project]
name = "rk3588-ai-video-codec"
dynamic = ["version"]
description = "RK3588 VPU benchmark CLI managed by uv"
requires-python = ">=3.11"
dependencies = [
	"matplotlib>=3.9",
]

[project.scripts]
benchmark-vpu = "rk3588_ai_video_codec.cli:main"
rk3588-ai-video-codec = "rk3588_ai_video_codec.cli:main"

[dependency-groups]
dev = [
	"pytest>=8.3.5",
	"ruff>=0.11.8",
]
docs = [
	"zensical>=0.0.39",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PTH", "PIE", "RUF"]
ignore = ["RUF001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rk3588_ai_video_codec/__init__.py"
